tmain_incdirs = [librecoll_incdir, '..', '../query',]

trappformime_sources = [
    'trappformime.cpp',
]
trappformime = executable(
    'trappformime',
    trappformime_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
traspell_sources = [
    'traspell.cpp',
]
traspell = executable(
    'traspell',
    traspell_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trbase64_sources = [
    'trbase64.cpp',
]
trbase64 = executable(
    'trbase64',
    trbase64_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trcircache_sources = [
    'trcircache.cpp',
]
trcircache = executable(
    'trcircache',
    trcircache_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trclosefrom_sources = [
    'trclosefrom.cpp',
]
trclosefrom = executable(
    'trclosefrom',
    trclosefrom_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trcopyfile_sources = [
    'trcopyfile.cpp',
]
trcopyfile = executable(
    'trcopyfile',
    trcopyfile_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trcpuconf_sources = [
    'trcpuconf.cpp',
]
trcpuconf = executable(
    'trcpuconf',
    trcpuconf_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trecrontab_sources = [
    'trecrontab.cpp',
]
trecrontab = executable(
    'trecrontab',
    trecrontab_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trfileudi_sources = [
    'trfileudi.cpp',
]
trfileudi = executable(
    'trfileudi',
    trfileudi_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trfstreewalk_sources = [
    'trfstreewalk.cpp',
]
trfstreewalk = executable(
    'trfstreewalk',
    trfstreewalk_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trhldata_sources = [
    'trhldata.cpp',
]
trhldata = executable(
    'trhldata',
    trhldata_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
tridfile_sources = [
    'tridfile.cpp',
]
tridfile = executable(
    'tridfile',
    tridfile_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)

#trinternfile_sources = [
#    'trinternfile.cpp',
#]
#trinternfile = executable(
#    'trinternfile',
#    trinternfile_sources,
#    include_directories: tmain_incdirs,
#    link_with: librecoll,
#    install: false,
#)
trmbox_sources = [
    'trmbox.cpp',
]
trmbox = executable(
    'trmbox',
    trmbox_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trmimeparse_sources = [
    'trmimeparse.cpp',
]
trmimeparse = executable(
    'trmimeparse',
    trmimeparse_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trmimetype_sources = [
    'trmimetype.cpp',
]
trmimetype = executable(
    'trmimetype',
    trmimetype_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trplaintorich_sources = [
    'trplaintorich.cpp',
]
trplaintorich = executable(
    'trplaintorich',
    trplaintorich_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trqrstore_sources = [
    'trqrstore.cpp',
]
trqrstore = executable(
    'trqrstore',
    trqrstore_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trrclconfig_sources = [
    'trrclconfig.cpp',
]
trrclconfig = executable(
    'trrclconfig',
    trrclconfig_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trrcldb_sources = [
    'trrcldb.cpp',
]
trrcldb = executable(
    'trrcldb',
    trrcldb_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trrclutil_sources = [
    'trrclutil.cpp',
]
trrclutil = executable(
    'trrclutil',
    trrclutil_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trstoplist_sources = [
    'trstoplist.cpp',
]
trstoplist = executable(
    'trstoplist',
    trstoplist_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trsubtreelist_sources = [
    'trsubtreelist.cpp',
]
trsubtreelist = executable(
    'trsubtreelist',
    trsubtreelist_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trsynfamily_sources = [
    'trsynfamily.cpp',
]
trsynfamily = executable(
    'trsynfamily',
    trsynfamily_sources,
    include_directories: tmain_incdirs,
    dependencies: xapian,
    link_with: librecoll,
    install: false,
)
trsyngroups_sources = [
    'trsyngroups.cpp',
]
trsyngroups = executable(
    'trsyngroups',
    trsyngroups_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trtextsplit_sources = [
    'trtextsplit.cpp',
]
trtextsplit = executable(
    'trtextsplit',
    trtextsplit_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trtranscode_sources = [
    'trtranscode.cpp',
]
trtranscode = executable(
    'trtranscode',
    trtranscode_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trunac_sources = [
    'trunac.cpp',
]
trunac = executable(
    'trunac',
    trunac_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trwipedir_sources = [
    'trwipedir.cpp',
]
trwipedir = executable(
    'trwipedir',
    trwipedir_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
trx11mon_sources = [
    'trx11mon.cpp',
]
trx11mon = executable(
    'trx11mon',
    trx11mon_sources,
    include_directories: tmain_incdirs,
    link_with: librecoll,
    install: false,
)
